--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
               <option value="null" selected></option>
               <option value="32.7+">> 32.7</option>
               <option value="28.28">28.28 - 32.7</option>
+              <option value="24">24 - 28.28</option>
               <option value="24-">< 24</option>
             </select>
           </article>
