--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 </head>
 <body>
   <section id="app-container">
+    <div class="sc-gauge active">
+      <button>x</button>
+      <div class="sc-background">
+        <div class="sc-percentage"></div>
+        <div class="sc-mask"></div>
+        <span class="sc-value">50</span>
+      </div>
+      <span class="sc-min">0</span>
+      <span class="sc-max">75</span>
+    </div>
+      
     <section id="user-type-section" class="active">
       <article class="user-type-container">
         <div class="">
